--- a/src/app.postcss
+++ b/src/app.postcss
@@ -20,3 +20,33 @@ body {
 	src: url('/fonts/SpaceGrotesk.ttf');
 	font-display: swap;
 }
+
+@layer components {
+  h1 {
+    @apply h1;
+  }
+  h2 {
+    @apply h2;
+  }
+  h3 {
+    @apply h3;
+  }
+  h4 {
+    @apply h4;
+  }
+  h5 {
+    @apply h5;
+  }
+  h6 {
+    @apply h6;
+  }
+  input {
+    @apply input;
+  }
+	code {
+		@apply code;
+	}
+	button {
+		@apply btn;
+	}
+}
